	Variables visible externally should be named X11_<foo>.

	* term/x11.trm (X11_waitforinput): waitforinput() handling of
	GE_fontprops must be protected by IPC_LOCK.

	* src/gplt_x11.c: dashedlines and replot_on_resize are tristate enums,
	not TBOOLEANS.

	* src/qtterminal/QtGnuplotWidget.cpp:  Don't even pretend to pass font
	metrics via GE_fontprops,  only the window height + width are valid.

2013-01-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/gadgets.h (E_Refresh_Allowed, TRefresh_Allowed): New
	enum/typedef to avoid magic constants in code using refresh_ok;
	(refresh_ok): Change to new type.
	(SET_REFRESH_OK): New macro to mask write accesses to refresh_ok
	and refresh_nplots if VOLATILE_REFRESH is not defined.

	* src/gadgets.c: Change definition of refresh_ok to new type.

	* src/set.c (set_logscale): Use new macro.

	* src/unset.c (unset_logscale, reset_command): Use new macro.

	* src/plot3d.c (eval_3dplots): Use new macro.

	* src/plot2d.c (eval_plots): Use new macro.

	* src/command.c (do_string_replot, refresh_request): Replace magic
	numbers by enum values.
	(replotrequest): Use new macro.

	* src/mouse.c (apply_zoom, event_buttonpress, do_save_3dplot):
	Replace magic numbers by enum values.

2013-01-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replotrequest):  #ifdef VOLATILE_REFRESH is needed with
	./configure --disable-volatile-data

2012-12-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Add a comment documenting the reason for
	problems with font size changes in terminals such as x11.

2012-12-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/Makefile.am (gnuplot.texi): Generated file has to be copied
	back to srcdir in out-of-tree builds.

	* docs/gnuplot.doc, docs/gnuplot.texi: Finally document that "set
	timefmt" accepts an axis argument.

2012-12-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/emf.trm: Adjust vertical centering of characters to match