@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.409 2012/12/28 06:50:45 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.410 2012/12/31 16:56:24 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -5771,7 +5771,7 @@ do_polygon( int dimensions, t_polygon *p, int style )
     TBOOLEAN noclip = FALSE;
     int nv;
 
-    if (!p->vertex)
+    if (!p->vertex || p->type < 2)
 	return;
 
     corners = gp_realloc(corners, p->type * sizeof(gpiPoint), "polygon");
@@ -5793,7 +5793,8 @@ do_polygon( int dimensions, t_polygon *p, int style )
 	clip_area = &canvas;
 
     if (term->filled_polygon && style) {
-	int i,o,clipped;
+	int i,o;
+	int clipped = 1;
 	gpiPoint temp;
 	for (i=0,o=0; i<nv-1; i++) {
 	    clpcorn[o] = corners[i];
